# Museum_Artifacts_App

./: Dockerfile  alembic.ini  big_test.py  docker-compose.yml  docs.md  export_museum_snapshot.py  pyproject.toml
alembic/: env.py
alembic/versions/: 053679cc996c_artifact_fk_issues.py  11fac970e3bc_init.py  18a9905d4ebb_fix_artifact_loan.py  4485158c8f14_artifact_fk_issues.py  b46f5669dabf_finalized_constraints_and_schemas.py  d3495306492c_fix_condition_reports.py
notebooks/: fake_notebook.py  notebook.ipynb
src/: data.sql  exceptions.py  logging_config.py  main.py
src/db/: database.py
src/domain/: __init__.py  artifact.py  artifact_loan.py  condition_report.py  loan.py  museum.py
src/dto/: artifact.py  artifact_loan.py  book.py  checkout_history.py  condition_report.py  loan.py  museum.py
src/repositories/: artifact_loan_repository.py  artifact_loan_repository_protocol.py  artifact_repository.py  artifact_repository_protocol.py  book_repository_sql.py  checkout_history_protocol.py  condition_report_repository.py  condition_report_repository_protocol.py  loan_repository.py  loan_repository_protocol.py  museum_repository.py  museum_repository_protocol.py
src/services/: artifact_loan_service.py  artifact_service.py  book_service.py  checkout_history_service.py  condition_report_service.py  loan_service.py  museum_service.py
static/: app.js  index.html  styles.css
static/pages/: artifacts.html  loans.html
static/scripts/: artifacts.js  loans.js
tests/: test_main.py
tests/mocks/: mock_artifact_loan_repository  mock_artifact_repository.py  (+4 more)
(+6 files in other folders)
