[project]
name = "museum-artifacts-app"
version = "0.1.0"
description = ""
authors = [
    {name = "KluEvo",email = "30702547+KluEvo@users.noreply.github.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)",
    "numpy (>=2.4.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
