[project]
name = "museum_artifacts_app"
version = "0.1.0"
description = ""
authors = [
    {name = "KluEvo",email = "30702547+KluEvo@users.noreply.github.com"}
]
requires-python = ">=3.12"
dependencies = [    
    "pandas (>=3.0.0,<4.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "psycopg[binary] (>=3.3.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
